# argo-bvp-trajectory

./: .gitignore  README.md  conftest.py  dsaux_variables.txt  pyproject.toml  raw_variables.txt  test_argo.py
configs/: 4903848.yml
docs/: 00_overview.md  01_cycle_file_schema.md  02_dev_notes.md  03_usage.md  04_variables_used.md  05_synthetic_data.md  06_preprocessing.md  07_integration.md  99_todo.md  MANUALE_PREPROCESS.md  PREPROCESS_SAMPLING_AND_VALIDITY.md  preprocessing.md  synthetic_data.md  variables_used.md
docs/BVP/: DEBUG_SOLVER_SYNTHETIC.md
examples/: argo_toy_visual.py  z_phase_errors_visual.py  z_sources_visual.py
examples/diagnostics/: plot_bvp_ready_global.py
ideas/: estimation.py
legacy/: README.md
legacy/docs/: README.md  RUNNING.md
legacy/docs/BVP/: API_REFERENCE.md  SOLVE_WORKFLOW.md
legacy/docs/PREPROCESS/: API_REFERENCE.md  DATA_PRODUCTS.md  OVERVIEW.md  REFERENCE.md  SAMPLING_VALIDITY.md
legacy/docs/legacy/: MANUALE_PREPROCESS.md  (+1 more)
legacy/examples/: argo_toy_visual.py  bvp_shooting_visual.py  convergence_visual.py
legacy/ideas/: bvp_shooting_with_surface_gps_visual.py
legacy/tests/: test_argo_style_forward_error.py  test_bvp_shooting_xy.py  test_integrators_constant_acc.py
scripts/: diagnose_frame.py  run_preprocess_one.py
src/argo_bvp/: __init__.py  cli.py  cycle_schema.py  run_integrate.py  run_preprocess.py
src/argobvp/: __init__.py  bvp.py
src/argobvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aux_counts.py  test_cli_sweep_smoke.py  test_convergence_dt.py  test_cycle_builder_minimal.py  test_cycle_schema.py  test_fubini_hits_anchors.py  test_local_enu_roundtrip.py  test_netcdf_roundtrip.py  test_parking_oscillations.py  test_preprocess_anchors.py  test_preprocess_build_cycle_from_synth.py  test_preprocess_naming.py  test_reconstruct_cycle_xy_synth.py  test_sweep_metrics_smoke.py  test_synth_outputs_exist.py  test_traj_gps_policy.py  test_transition_smoothing.py  test_truth_basic.py  test_truth_frame_consistency.py  test_z_phase_errors_vs_dt.py  test_z_samples_trapezoid_vs_euler.py  test_z_sources_piecewise_profile.py
(+65 files in other folders)
