[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argobvp"
version = "0.1.0"
description = "Boundary-value reconstruction of Argo float trajectories"
authors = [{name = "Jacopo Busatto"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]

preprocess = [
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
