[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argobvp"
version = "1.1.0"
description = "Boundary-value reconstruction of Argo float trajectories"
authors = [{name = "Jacopo Busatto"}]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "numpy>=1.26,<2",
  "xarray==2024.6.0",
  "h5netcdf>=1.3",
  "h5py>=3.10",
  "matplotlib>=3.8",
]

[project.scripts]
argo-bvp = "argo_bvp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]

preprocess = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
